== 1.4.2
    Bugfixes:
    ----------------------------
    + Fix generated functions/upgrade_queries.php queries (#3130);
    + Table layout not aligned (#3105,#3113);
    + Invalid scan type () error (#2785);
    + Invalid CSRF cookie editing rack items (#2556);

    Security Fixes:
    ----------------------------
    + Upgraded jQuery to 3.5.1 (#3119);
    + Stored XSS in instructions widgets (#3025);

== 1.4.1

    Bugfixes:
    ----------------------------
    + Fixed upgrade queries issues from 1.3.2 to 1.4;
    + Fixed boolean printout in footer (#2625);
    + Fixed BGP Admin isn't working (#2631);
    + MySQL 8.0 compatibility. (#2646,#2239);
    + Table layout not aligned (#2656);
    + Improve scanning requirement checks (#1183);
    + PDNS Add/Edit DNS record not working for normal users (#2686);
    + Unable to save settings with link addresses = text custom field (#2702);
    + Kea MAC address display issue (#2704);
    + Returned custom fields to devices table (#2572);
    + Invalid scan agent key warning;
    + Subnet filter issue when IP contains 0 octet. (#2748);
    + Add VLAN button not working (#2741);
    + Incorrect subnet links in /tools/vrf/ view. (#2774);
    + Location data missing in exports. (#2833);
    + Check mysqldump path when exporting database;
    + Current rack position missing when editing a device. (#2545);
    + Misc html fixes (#3026,#3081,#3082);
    + API:
        + Fixed /user/ calls for SSL with app code (static app code);
        + Address IP field not displayed when using filter_by (#2934);
        + Addresses first_free & Subnets first/last_subnet thread safety (#2960);

    Security Fixes:
    ----------------------------
    + SQL injections processing `tableName` (#2738);
    + SQL injections processing `ftype` (#2751);
    + All circuits map, PHP object injection (#2937);

== 1.4

    New features:
    ------------
    + Configurable password policy;
    + Sessions can be now stored in database (#516);